파일 업로드 기능 유효성 검사 추가 및 요청 규격 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,4 @@ spring:
 app:
   upload:
     file-path: src/main/resources/images
+    extensions: pdf, doc, docx, xls, xlsx, ppt, pptx, jpg, jpeg, png, gif, bmp, zip, rar, txt, csv
