--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,6 +6,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 app:
   upload:
