--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
@@ -37,6 +38,8 @@ dependencies {
 
     implementation 'org.springframework.security:spring-security-core:6.3.3'
     implementation 'org.springframework.session:spring-session-data-redis:3.3.2'
+
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     implementation 'com.github.codemonstur:embedded-redis:1.4.3'
     runtimeOnly 'com.h2database:h2'
