--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
   h2:
     console:
       enabled: true
@@ -13,6 +16,13 @@ spring:
     redis:
       host: localhost
       port: 6379
+  cache:
+    type: redis
+
+logging:
+  level:
+    org.springframework.cache: DEBUG
+    org.springframework.data.redis: DEBUG
 
 app:
   upload:
